Fixed building under Java 17